# codezilla

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  config.yaml  go.mod  go.sum  release.toml  scratch.go  sqlc.yaml
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml
bench/tasks/add-json-serialization/: task.yaml
bench/tasks/debug-failing-tests/: task.yaml
bench/tasks/extract-function/: task.yaml
bench/tasks/find-bug-in-large-repo/: task.yaml
bench/tasks/fix-off-by-one/: task.yaml
bench/tasks/fix-path-traversal/: task.yaml
bench/tasks/implement-from-spec/: task.yaml
cmd/codezilla/: main.go
docs/: ARCHITECTURE.md  MEMORY_CONTROLLER.md
internal/agent/: agent.go  context.go  context_manager.go  interaction.go  interaction_test.go  middleware.go  orchestrator.go  orchestrator_adapter.go  orchestrator_context.go  orchestrator_errors.go  orchestrator_scenarios_test.go  orchestrator_test.go  planner.go  prompt.go  response.go  router.go  router_test.go  stream_processor.go  stream_processor_test.go  testutil_mock_llm.go  token_tracker.go  tool_executor.go  tool_extraction_test.go  tool_extractor.go  tool_parser.go  verify.go  verify_test.go
internal/config/: config.go
internal/core/: app.go  app_sessions.go  llm_adapter.go  tool_setup.go
internal/db/: database.go  history_provider.go
internal/session/: recorder.go
internal/skills/: registry.go  skill.go
internal/storage/: todo_repository.go
internal/tools/: analyzer_factory.go  diff.go  execute.go  fetchurl.go  fileedit.go  filelock.go  filemanage.go  fileread.go  fileundo.go  filewrite.go  grepsearch.go  job_tools.go  multireplace.go  permission.go  permission_test.go  project_analyzer.go  repo_mapper.go  shell_manager.go  subagent.go  todo.go  todo_persistence.go  todo_test.go  todo_v2.go  tools.go  websearch.go
internal/ui/: agent_block.go  base_ui.go  bubbletea_ui.go  fancy_ui.go  input.go  interface.go  minimal_ui.go  test_main.go  theme.go
llm/: provider.go
llm/ollama/: adapter.go  client.go
pkg/logger/: logger.go
scratch/: scratch.go
skills/: caveman.md  reviewer.md
src/: main.rs
src/llm/: client.rs  mod.rs
src/logger/: mod.rs
src/system/: config.rs  domain.rs  error.rs  event_payload.rs  mod.rs  persistence.rs  runtime.rs  server.rs  surfaces.rs
training/memory-controller/: README.md  eval-cases.jsonl  examples.jsonl  synthetic.jsonl
(+125 files in other folders)
