[package]
name = "codezilla"
version = "2.0.0"
edition = "2021"
description = "Codezilla — AI-powered coding assistant (Rust)"
default-run = "codezilla"

[[bin]]
name = "codezilla"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP client (for LLM APIs + web search)
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
arboard = "3"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"
thiserror = "2"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Environment variables
dotenvy = "0.15"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
once_cell = "1"
dirs = "6"
walkdir = "2"
glob = "0.3"
sha2 = "0.10"
md5 = "0.7"
futures = "0.3"
futures-util = "0.3"
bytes = "1"
base64 = "0.22"
url = "2"
html2text = "0.12"
scraper = "0.22"
async-trait = "0.1"
pulldown-cmark = "0.12"
similar = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# ── Fast development profile ──────────────────────────────────────────────────
# `cargo run` / `cargo build` already use this by default.
# Tweaks here shorten incremental compile + link times without installing
# a fast linker (though `brew install llvm` + config.toml would help further).
[profile.dev]
opt-level = 0          # no optimisation — fastest codegen
debug = 1              # line tables only (not full DWARF) — faster link
incremental = true     # reuse unchanged object files
codegen-units = 256    # max parallelism across crates
split-debuginfo = "unpacked"  # avoids slow dsymutil on macOS

# `cargo run --profile dev-fast` — absolute minimum; use when you only want
# to verify it compiles (e.g. CI smoke check or first-time cold build).
[profile.dev-fast]
inherits = "dev"
debug = 0
strip = "debuginfo"
